# versionoverlord

./: .gitignore  .mypi.ini  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: python-publish.yml
scripts/: cleanup.sh  makefakeproject.sh  packageme.sh  pushtoprod.sh  pushtotest.sh  runmypy.sh  runtests.sh
scripts/fakeConfigurationFiles/: config.yml  pyproject.toml  requirements.txt  setup.py
src/versionoverlord/: BaseHandler.py  Common.py  GitHubAdapter.py  GitHubAdapterTypes.py  IHandler.py  SlugHandler.py  TemplateHandler.py
src/versionoverlord/circleci/: HandleCircleCI.py
src/versionoverlord/commands/: BumpVersion.py  CreateSpecification.py  DraftRelease.py  PickDependencies.py  PublishRelease.py  QuerySlugs.py  UpdateDependencies.py  VersionOverlord.py
src/versionoverlord/exceptions/: UnknownGitHubRelease.py
src/versionoverlord/githubadapter/: GitHubAdapter.py  GitHubAdapterTypes.py
src/versionoverlord/pyprojecttoml/: HandlePyProjectToml.py
src/versionoverlord/requirements/: HandleRequirementsTxt.py
src/versionoverlord/setup/: HandleSetupPy.py
tests/: TestAll.py  TestBase.py  TestGitHubAdapter.py  TestTemplate.py
tests/resources/: testLoggingConfig.json  testLoggingConfiguration.json
tests/resources/testdata/: .travis.yml  AdvancedSlugs.slg  SimpleSlugs.slg  config.yml  pyproject.toml  query.slg  requirements.txt  setup.py
tests/resources/testdata/golden/: .travis.yml  config.yml  pyproject.toml  requirements.txt  setup.py
tests/versionoverlord/: TestFileToAdvancedSlugs.py  TestIHandler.py
tests/versionoverlord/circleci/: TestCircleCI.py  TestHandleCircleCI.py
tests/versionoverlord/pyprojecttoml/: TestHandlePyProjectToml.py
tests/versionoverlord/requirements/: TestHandleRequirementsTxt.py
tests/versionoverlord/setup/: TestHandleSetupPy.py
tests/versionoverlord/travisci/: TestTravisCI.py
versionoverlord/: BaseHandler.py  Common.py  CreateSpecification.py  GitHubAdapter.py  SlugHandler.py  TemplateHandler.py  UpdateDependencies.py  VUpdate.py  VersionOverlord.py
versionoverlord/circleci/: HandleCircleCI.py
versionoverlord/commands/: CreateSpecification.py  QuerySlugs.py
versionoverlord/exceptions/: NoSetupPyFileException.py
versionoverlord/requirements/: HandleRequirementsTxt.py
versionoverlord/resources/: loggingConfig.json
versionoverlord/setup/: HandleSetupPy.py
