[build-system]
requires = ['setuptools', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name='pyutmodel'
dynamic = ["version"]
description = 'Fake file'
readme = "README.md"
license = {text = 'GNU AFFERO GENERAL PUBLIC LICENSE'}
authors = [{name = 'Humberto A. Sanchez II', email = 'Humbert.A.Sanchez.II@gmail.com'}]
maintainers = [{name = 'Humberto A. Sanchez II', email = 'Humbert.A.Sanchez.II@gmail.com'}]
keywords = ['pyut', 'external model', 'python',]

dependencies = [
  'ogl==0.1.0',
  'buildlackey~=0.2.0',
  'codeallybasic==0.3.0',
]

[project.urls]
Repository = 'https://github.com/hasii2011/pyutmodel'


[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
pyutmodel = ['py.typed']

[tool.setuptools.dynamic]
version = {attr = 'pyutmodel.__version__'}
